syntax = "proto3";
option go_package = "./coordinator;pb_coordinator";

service CoordinatorListener {
  rpc JoinPublication (JoinPublicationRequest) returns (JoinPublicationResponse);
  rpc RollbackJoinPublication (RollbackJoinPublicationRequest) returns (Response);

  rpc LeavePublication (LeavePublicationRequest) returns (LeavePublicationResponse);
  rpc RollbackLeavePublication (RollbackLeavePublicationRequest) returns (Response);

  rpc ChangePublicationPlan (ChangePublicationPlanRequest) returns (ChangePublicationPlanResponse);
  rpc RollbackChangePublicationPlan (RollbackChangePublicationPlanRequest) returns (Response);

  rpc ConfirmPublisherSubscription (ConfirmPublisherSubscriptionRequest) returns (ConfirmPublisherSubscriptionResponse);
  rpc RollbackConfirmPublisherSubscription (RollbackConfirmPublisherSubscriptionRequest) returns (Response);

  rpc RevokePublisherSubscription (RevokePublisherSubscriptionRequest) returns (RevokePublisherSubscriptionResponse);
  rpc RollbackRevokePublisherSubscription (RollbackRevokePublisherSubscriptionRequest) returns (Response);

  rpc ChangePublisherSubscription (ChangePublisherSubscriptionRequest) returns (ChangePublisherSubscriptionResponse);
  rpc RollbackChangePublisherSubscription (RollbackChangePublisherSubscriptionRequest) returns (Response);
}

message Response {
  bool is_success = 1;
}

message JoinPublicationRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
  bool is_premium = 3;
}
message JoinPublicationResponse {
  int32 subscription_id = 1;
}
message RollbackJoinPublicationRequest {
  int32 subscription_id = 1;
}

message LeavePublicationRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
}
message LeavePublicationResponse {
  int32 subscription_id = 1;
}
message RollbackLeavePublicationRequest {
  int32 subscription_id = 1;
}

message ChangePublicationPlanRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
}
message ChangePublicationPlanResponse {
  int32 subscription_id = 1;
}
message RollbackChangePublicationPlanRequest {
  int32 subscription_id = 1;
}

message ConfirmPublisherSubscriptionRequest {
  int32 user_id = 1;
  int32 plan_id = 2;
}
message ConfirmPublisherSubscriptionResponse {
  int32 subscription_id = 1;
}
message RollbackConfirmPublisherSubscriptionRequest {
  int32 subscription_id = 1;
}

message RevokePublisherSubscriptionRequest {
  int32 user_id = 1;
  int32 plan_id = 2;
}
message RevokePublisherSubscriptionResponse {
  int32 subscription_id = 1;
}
message RollbackRevokePublisherSubscriptionRequest {
  int32 subscription_id = 1;
}

message ChangePublisherSubscriptionRequest {
  int32 user_id = 1;
  int32 plan_id = 2;
}
message ChangePublisherSubscriptionResponse {
  int32 subscription_id = 1;
  int32 old_plan_id = 2;
}
message RollbackChangePublisherSubscriptionRequest {
  int32 subscription_id = 1;
  int32 old_plan_id = 2;
}
